Don't use deprecated methods (#173)